--- a/node.js/package.json
+++ b/node.js/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
+    "express": "^4.17.2",
     "moment": "^2.29.1"
   },
   "name": "node",
   "version": "1.0.0",
   "main": "dateFormat.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
