--- a/node.js/package.json
+++ b/node.js/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "mysql": "^2.18.1"
   },
   "name": "node",
   "version": "1.0.0",
