--- a/node.js/api_server/package.json
+++ b/node.js/api_server/package.json
@@ -11,10 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@escook/express-joi": "^1.1.1",
-    "@hapi/joi": "^17.1.0",
+    "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
     "cros": "^1.0.1",
     "express": "^4.17.2",
+    "express-jwt": "^5.3.3",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1"
   }
 }
